--- a/app/views/panel/exams/index.html.erb
+++ b/app/views/panel/exams/index.html.erb
@@ -1,1 +1,13 @@
-Exam
+<div class="page-header">
+  <h1 class="page-header__title">Simulados</h1>
+
+  <div class="page-header__actions">
+    <a href="" class="btn btn-primary">Criar simulado</a>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    Simulado de ciências
+  </div>
+</div>
