--- a/app/views/layouts/panel.html.erb
+++ b/app/views/layouts/panel.html.erb
@@ -13,7 +13,7 @@
 <body>
   <%= render partial: 'layouts/panel/navbar' %>
 
-  <div class="container">
+  <div class="container py-5">
     <%= yield %>
   </div>
 </body>
