--- a/app/views/panel/exams/index.html.erb
+++ b/app/views/panel/exams/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="page-header__title">Simulados</h1>
 
   <div class="page-header__actions">
-    <a href="" class="btn btn-primary">Criar simulado</a>
+    <a href="<%= new_panel_exam_path %>" class="btn btn-primary">Novo simulado</a>
   </div>
 </div>
 
