--- a/app/views/panel/exams/new.html.erb
+++ b/app/views/panel/exams/new.html.erb
@@ -21,5 +21,7 @@
 
   <div class="col-9">
     <h5 class="mb-4">Questões</h5>
+
+    <%= react_component('HelloNote', name: 'John') %>
   </div>
 </div>
