--- a/app/views/panel/exams/new.html.erb
+++ b/app/views/panel/exams/new.html.erb
@@ -6,22 +6,24 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-3">
-    <div class="form-group">
-      <label for="" class="required">Título</label>
-      <input type="text" class="form-control">
+<%= form_for [:panel, @new_exam]  do |f| %>
+  <div class="row">
+    <div class="col-3">
+      <div class="form-group">
+        <label for="" class="required">Título</label>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <label for="">Duração</label>
+        <%= f.text_field :duration_in_minutes, class: 'form-control' %>
+      </div>
     </div>
 
-    <div class="form-group">
-      <label for="">Duração</label>
-      <input type="text" class="form-control">
+    <div class="col-9">
+      <h5 class="mb-4">Questões</h5>
+
+      <%= react_component('HelloNote', name: 'John') %>
     </div>
   </div>
-
-  <div class="col-9">
-    <h5 class="mb-4">Questões</h5>
-
-    <%= react_component('HelloNote', name: 'John') %>
-  </div>
-</div>
+<% end %>
