--- a/app/views/panel/exams/new.html.erb
+++ b/app/views/panel/exams/new.html.erb
@@ -11,12 +11,12 @@
     <div class="col-3">
       <div class="form-group">
         <label for="" class="required">Título</label>
-        <%= f.text_field :title, class: 'form-control' %>
+        <%= f.text_field :title, class: 'form-control', required: true %>
       </div>
 
       <div class="form-group">
-        <label for="">Duração</label>
-        <%= f.text_field :duration_in_minutes, class: 'form-control' %>
+        <label for="" class="required">Duração</label>
+        <%= f.text_field :duration_in_minutes, class: 'form-control', required: true %>
       </div>
     </div>
 
