--- a/app/views/panel/exams/new.html.erb
+++ b/app/views/panel/exams/new.html.erb
@@ -17,6 +17,9 @@
       <div class="form-group">
         <label for="" class="required">Duração</label>
         <%= f.text_field :duration_in_minutes, class: 'form-control', required: true %>
+        <small class="form-text text-muted">
+          Tempo em minutos
+        </small>
       </div>
     </div>
 
