--- a/app/views/layouts/panel/_navbar.html.erb
+++ b/app/views/layouts/panel/_navbar.html.erb
@@ -11,6 +11,10 @@
         <li class="nav-item active">
           <a class="nav-link" href="<%= panel_exams_path %>">Simulados</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="<%= panel_students_path %>">Estudantes</a>
+        </li>
       </ul>
     </div>
   </div>
