--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,57 @@ body, html {
   height: 100%;
 }
 
+.minh-100 {
+  min-height: 100%;
+}
+
+.drawer {
+  width: 250px;
+  min-height: 100%;
+  border-right: 1px solid #CCC;
+  display: flex;
+  flex-direction: column;
+
+  .drawer_header,
+  footer {
+    padding: 1rem 2rem;
+    font-weight: 700;
+  }
+
+  footer {
+    margin-top: auto;
+  }
+
+  a {
+    display: block;
+    padding: 0.8rem 2rem;
+    color: inherit;
+  }
+}
+
+.exam-top {
+  display: block;
+  border-bottom: 1px solid #CCC;
+
+  .exam-top__scroll {
+    overflow-x: overlay;
+    flex-direction: row;
+    white-space: nowrap;
+    padding: 1rem 0;
+  }
+
+  button {
+    background: none;
+    padding: 0;
+    border: 0;
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    background: #CCC;
+    margin-left: 1rem;
+  }
+}
+
 .card-body {
   padding: 0.8rem 1.25rem;
 }
