--- a/app/views/panel/exams/index.html.erb
+++ b/app/views/panel/exams/index.html.erb
@@ -2,7 +2,9 @@
   <h1 class="page-header__title">Simulados</h1>
 
   <div class="page-header__actions">
-    <a href="<%= new_panel_exam_path %>" class="btn btn-primary">Novo simulado</a>
+    <% if current_user.teacher? %>
+      <a href="<%= new_panel_exam_path %>" class="btn btn-primary">Novo simulado</a>
+    <% end %>
   </div>
 </div>
 
@@ -17,9 +19,13 @@
     <div class="card-body">
       <div class="row align-items-center">
         <div class="col h5 m-0">
-          <a href="<%= edit_panel_exam_path(exam) %>">
+          <% if current_user.teacher? %>
+            <a href="<%= edit_panel_exam_path(exam) %>">
+              <%= exam.title %>
+            </a>
+          <% else %>
             <%= exam.title %>
-          </a>
+          <% end %>
         </div>
 
         <div class="col">
@@ -33,7 +39,11 @@
         </div>
 
         <div class="col-auto ml-auto">
-          <%= button_to "Excluir", panel_exam_path(exam), method: :delete, class: 'btn btn-sm btn-confirm', data: { confirm: 'Você tem certeza que deseja deletar este simulado?' } %>
+          <% if current_user.teacher? %>
+            <%= button_to "Excluir", panel_exam_path(exam), method: :delete, class: 'btn btn-sm btn-confirm', data: { confirm: 'Você tem certeza que deseja deletar este simulado?' } %>
+          <% else %>
+            <a href="<%= panel_student_exam_start_path(exam) %>" class="btn btn-primary">Iniciar</a>
+          <% end %>
         </div>
       </div>
     </div>
