--- a/app/views/layouts/panel.html.erb
+++ b/app/views/layouts/panel.html.erb
@@ -16,13 +16,11 @@
       <%= render partial: 'layouts/panel/navbar' %>
     </div>
 
-    <div class="container py-5">
-      <%= yield %>
-    </div>
+    <%= yield %>
 
     <footer class="mt-auto py-5">
-      <div class="container text-muted">
-        Todos os direitos reservados - <b>NAV10 2018</b>
+      <div class="container text-muted text-center">
+        Todos os direitos reservados <br><b>NAV10 2018</b>
       </div>
     </footer>
   </div>
