--- a/app/views/layouts/panel/_navbar.html.erb
+++ b/app/views/layouts/panel/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary py-3">
   <div class="container">
     <a class="navbar-brand" href="#">Nav10</a>
 
