--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,10 @@ body, html {
   height: 100%;
 }
 
+button {
+  outline: 0 !important;
+}
+
 .minh-100 {
   min-height: 100%;
 }
@@ -48,7 +52,6 @@ body, html {
     font-size: 1.2rem;
     background: none;
     border: 0;
-    outline: 0;
 
     &.active {
       border-top: 3px solid transparent;
