--- a/app/views/panel/student_exams/start.html.erb
+++ b/app/views/panel/student_exams/start.html.erb
@@ -1,1 +1,4 @@
-<%= react_component('Exam', questions: @exam_application.exam.exam_questions.as_json(include: :exam_question_options)) %>
+<%= react_component(
+  'Exam',
+  questions: @exam_application.exam.exam_questions.as_json(include: :exam_question_options))
+%>
