--- a/app/views/panel/student_exams/index.html.erb
+++ b/app/views/panel/student_exams/index.html.erb
@@ -1,35 +1,47 @@
-<div class="page-header">
-  <h1 class="page-header__title">Simulados</h1>
-</div>
-
-<% if @exam_applications.empty? %>
-  <div class="text-center">
-    <h3 class="text-muted">Nenhum simulado disponível</h3>
+<div class="container py-4">
+  <div class="page-header">
+    <h1 class="page-header__title">Simulados</h1>
   </div>
-<% end %>
 
-<% @exam_applications.each do |exam_application| %>
-  <div class="card mb-1">
-    <div class="card-body">
-      <div class="row align-items-center">
-        <div class="col h5 m-0">
-          <%= exam_application.exam.title %>
-        </div>
+  <% if @exam_applications.empty? %>
+    <div class="text-center">
+      <h3 class="text-muted">Nenhum simulado disponível</h3>
+    </div>
+  <% end %>
 
-        <div class="col">
-          <div>Duração</div>
-          <div><b><%= exam_application.exam.duration_in_minutes %> minutos</b></div>
-        </div>
+  <% @exam_applications.each do |exam_application| %>
+    <div class="card mb-1">
+      <div class="card-body">
+        <div class="row align-items-center">
+          <div class="col h5 m-0">
 
-        <div class="col">
-          <div>Questões</div>
-          <div><b><%= exam_application.exam.exam_questions.count %></b></div>
-        </div>
+            <% if exam_application.finished_by_user?(current_user) %>
+              <%= exam_application.exam.title %><br>
+              <small>Concluído</small>
+            <% else %>
+              <a href="<%= panel_student_exam_start_path exam_application %>">
+                <%= exam_application.exam.title %>
+              </a>
+            <% end %>
+          </div>
 
-        <div class="col-auto ml-auto">
-          <a href="<%= panel_student_exam_start_path exam_application %>" class="btn btn-primary">Começar</a>
+          <% if !exam_application.finished_by_user?(current_user) %>
+            <div class="col d-none d-md-block">
+              <div>Duração</div>
+              <div><b><%= exam_application.exam.duration_in_minutes %> minutos</b></div>
+            </div>
+
+            <div class="col d-none d-md-block">
+              <div>Questões</div>
+              <div><b><%= exam_application.exam.exam_questions.count %></b></div>
+            </div>
+
+            <div class="col-auto d-none d-md-block ml-auto">
+              <a href="<%= panel_student_exam_start_path exam_application %>" class="btn btn-primary">Começar</a>
+            </div>
+          <% end %>          
         </div>
       </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
