Send user history after user interaction

--- a/app/views/panel/exam_applications/edit.html.erb
+++ b/app/views/panel/exam_applications/edit.html.erb
@@ -3,7 +3,7 @@
     <h1 class="page-header__title">Editar aplicação</h1>
 
     <div class="page-header__actions">
-      <a href="<%= panel_groups_path %>" class="btn btn-light">Cancelar</a>
+      <a href="<%= panel_exam_applications_path %>" class="btn btn-light">Cancelar</a>
     </div>
   </div>
 
