--- a/app/views/panel/exam_applications/index.html.erb
+++ b/app/views/panel/exam_applications/index.html.erb
@@ -2,9 +2,11 @@
   <div class="page-header">
     <h1 class="page-header__title">Aplicações</h1>
 
-    <div class="page-header__actions">
-      <a href="<%= new_panel_exam_application_path %>" class="btn btn-primary">Nova aplicação</a>
-    </div>
+    <% if current_user.teacher? %>
+      <div class="page-header__actions">
+        <a href="<%= new_panel_exam_application_path %>" class="btn btn-primary">Nova aplicação</a>
+      </div>
+    <% end %>
   </div>
 
   <% if @exam_applications.empty? %>
@@ -18,9 +20,13 @@
       <div class="card-body">
         <div class="row align-items-center">
           <div class="col h5 m-0">
-            <a href="<%= panel_exam_application_path(exam_application) %>">
+            <% if current_user.teacher? %>
+              <a href="<%= panel_exam_application_path(exam_application) %>">
+                Aplicação <%= exam_application.id %>
+              </a>
+            <% else %>
               Aplicação <%= exam_application.id %>
-            </a>
+            <% end %>
           </div>
 
           <div class="col">
@@ -39,8 +45,17 @@
           </div>
 
           <div class="col-auto ml-auto d-flex">
-            <%= button_to "Excluir", panel_exam_application_path(exam_application), method: :delete, class: 'btn btn-sm btn-confirm mr-2', data: { confirm: 'Você tem certeza que deseja deletar esta aplicação?' } %>
-            <a href="<%= edit_panel_exam_application_path(exam_application) %>" class="btn btn-sm btn-primary">Editar</a>
+            <% if current_user.teacher? %>
+              <%= button_to "Excluir", panel_exam_application_path(exam_application), method: :delete, class: 'btn btn-sm btn-confirm mr-2', data: { confirm: 'Você tem certeza que deseja deletar esta aplicação?' } %>
+              <a href="<%= edit_panel_exam_application_path(exam_application) %>" class="btn btn-sm btn-primary">Editar</a>
+            <% else %>
+              <a
+                href="<%= panel_exam_application_start_path(exam_application) %>"
+                class="btn btn-primary btn-sm"
+              >
+                Iniciar
+              </a>
+            <% end %>
           </div>
         </div>
       </div>
