--- a/app/views/panel/user_answers/show.html.erb
+++ b/app/views/panel/user_answers/show.html.erb
@@ -7,7 +7,7 @@
         href="<%= panel_exam_applications_path(@user_answer.exam_application_id) %>"
         class="btn btn-light"
       >
-        Cancelar
+        Voltar
       </a>
     </div>
   </div>
