--- a/app/views/panel/exam_applications/index.html.erb
+++ b/app/views/panel/exam_applications/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container py-4">
   <div class="page-header">
-    <h1 class="page-header__title">Aplicações</h1>
-
     <% if current_user.teacher? %>
+      <h1 class="page-header__title">Aplicações</h1>
+
       <div class="page-header__actions">
         <a href="<%= new_panel_exam_application_path %>" class="btn btn-primary">Nova aplicação</a>
       </div>
+    <% else %>
+      <h1 class="page-header__title">Simulados</h1>
     <% end %>
   </div>
 
@@ -24,37 +26,39 @@
               <a href="<%= panel_exam_application_path(exam_application) %>">
                 Aplicação <%= exam_application.id %>
               </a>
+            <% elsif(!current_user.answered?(exam_application)) %>
+              <a href="<%= panel_exam_application_start_path(exam_application) %>">
+                <%= exam_application.exam.title %>
+              </a>
             <% else %>
-              Aplicação <%= exam_application.id %>
+              <div><%= exam_application.exam.title %></div>
+              <small>Respondido</small>
             <% end %>
           </div>
 
-          <div class="col">
-            <div>Simulado</div>
-            <div><b><%= exam_application.exam.title %></b></div>
-          </div>
+          <% if current_user.teacher? %>
+            <div class="col">
+              <div>Simulado</div>
+              <div><b><%= exam_application.exam.title %></b></div>
+            </div>
+          <% end %>
 
-          <div class="col">
+          <div class="col d-none d-md-block">
             <div>Turma</div>
             <div><b><%= exam_application.group.name %></b></div>
           </div>
 
-          <div class="col">
-            <div>Aplicado em</div>
-            <div><b><%= exam_application.created_at.strftime("%d/%m/%Y") %></b></div>
-          </div>
+          <% if current_user.teacher? %>
+            <div class="col">
+              <div>Aplicado em</div>
+              <div><b><%= exam_application.created_at.strftime("%d/%m/%Y") %></b></div>
+            </div>
+          <% end %>
 
           <div class="col-auto ml-auto d-flex">
             <% if current_user.teacher? %>
               <%= button_to "Excluir", panel_exam_application_path(exam_application), method: :delete, class: 'btn btn-sm btn-confirm mr-2', data: { confirm: 'Você tem certeza que deseja deletar esta aplicação?' } %>
               <a href="<%= edit_panel_exam_application_path(exam_application) %>" class="btn btn-sm btn-primary">Editar</a>
-            <% else %>
-              <a
-                href="<%= panel_exam_application_start_path(exam_application) %>"
-                class="btn btn-primary btn-sm"
-              >
-                Iniciar
-              </a>
             <% end %>
           </div>
         </div>
