--- a/app/views/panel/exam_applications/index.html.erb
+++ b/app/views/panel/exam_applications/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container py-4">
   <div class="page-header">
     <% if current_user.teacher? %>
-      <h1 class="page-header__title">Aplicações</h1>
+      <h1 class="page-header__title">Aplicação de simulado</h1>
 
       <div class="page-header__actions">
         <a href="<%= new_panel_exam_application_path %>" class="btn btn-primary">Nova aplicação</a>
