Refact exam panel pages

--- a/app/views/panel/exams/edit.html.erb
+++ b/app/views/panel/exams/edit.html.erb
@@ -7,28 +7,5 @@
     </div>
   </div>
 
-  <%= form_for [:panel, @exam]  do |f| %>
-    <div class="row">
-      <div class="col-3">
-        <div class="form-group">
-          <label for="" class="required">Título</label>
-          <%= f.text_field :title, class: 'form-control', required: true %>
-        </div>
-
-        <div class="form-group">
-          <label for="" class="required">Duração</label>
-          <%= f.number_field :duration_in_minutes, class: 'form-control', required: true %>
-          <small class="form-text text-muted">
-            Tempo em minutos
-          </small>
-        </div>
-      </div>
-
-      <div class="col-9">
-        <h5 class="mb-4">Questões</h5>
-
-        <%= react_component('HelloNote', questions: @exam.exam_questions.as_json(include: :exam_question_options)) %>
-      </div>
-    </div>
-  <% end %>
+  <%= render partial: 'form', locals: { exam: @exam } %>
 </div>
